# CompilerC

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: README.md
compiler/: CMakeLists.txt  CodeGenVisitor.cpp  CodeGenVisitor.h  README.md  ifcc.g4  main.cpp  test.c
compiler/ast/: Block.cpp  Block.h  Declaration.cpp  Declaration.h  Expression.cpp  Expression.h  Function.cpp  Function.h  IfElse.cpp  IfElse.h  Instruction.cpp  Instruction.h  IrScope.cpp  IrScope.h  OpExpression.cpp  OpExpression.h  Prog.cpp  Prog.h  Return.cpp  Return.h  Scope.cpp  Scope.h  TypeSymbol.cpp  TypeSymbol.h  UnaryOp.cpp  UnaryOp.h  While.cpp  While.h
compiler/ir/: BasicBlock.cpp  BasicBlock.h  Block.cpp  Block.h  Declaration.cpp  Declaration.h  Expression.cpp  Expression.h  Function.cpp  Function.h  IfElse.cpp  IfElse.h  IrAddQ.cpp  IrAddQ.h  IrCall.cpp  IrCall.h  IrCompare.cpp  IrCompare.h  IrConstant.cpp  IrConstant.h  IrCopy.cpp  IrCopy.h  IrElement.cpp  IrElement.h  IrEpilogue.cpp  IrEpilogue.h  IrFunction.cpp  IrFunction.h  IrGlobal.cpp  IrGlobal.h  IrInstruction.cpp  IrInstruction.h  IrJump.cpp  IrJump.h  IrLabel.cpp  IrLabel.h  IrMovzbl.cpp  IrMovzbl.h  IrNoOp.cpp  IrNoOp.h  (+22 more)
compiler/opt/: LiveRangeAnalyzer.cpp  LiveRangeAnalyzer.h  MemoryAllocator.cpp  MemoryAllocator.h
tests/: ifcc-test.py  ifcc-wrapper.sh
tests/testfiles/: 10_2_return_ones_priority.c  11_return_times.c  12_return_long_times.c  14_return_addsub_times_priority.c  16_return_multiple_div.c  18_return_addsub_times_div.c  19_return_addsub_times_div_priority.c  20_bad_main.c  21_forget_semicolon.c  23_multiple_semicolon.c  24_multiple_return.c  25_modulo.c  28_10_compare.c  28_12_compare.c  28_14_compare.c  28_16_compare.c  28_17_compare.c  28_1_compare.c  28_4_compare.c  28_5_compare.c  28_6_compare.c  29_1_grammar_error.c  29_2_grammar_error.c  30_commentary.c  31_1_unary_not.c  32_2_unary_minus.c  33_1_bitwise_and.c  36_1_bitwise_complex.c  5_return_varexp.c  6_return_add.c  7_return_addsub.c  9_return_addsub_priority.c  file.c
tests/testfiles/_H02_Testsfiles/: 10_function_calls.c  10_if_elseif_else_if_satisfied.c  10_soustraction.c  11_addition_multiplication.c  11_double_affectation_bis.c  11_function_nested_call.c  11_if_elseif_else_elseif_satisfied.c  12_addition_multiplication.c  12_function_calls_bis.c  12_if_elseif_else_else_satisfied.c  12_wrong_id_declaration.c  13_no_declaration.c  13_parenthesis.c  13_parenthesis_function_call.c  14_retun.c  14_reuse_var_inside_func.c  14_unary_minus.c  15_function_calls_bis_bis.c  15_unary_minus.c  16_unary_parenthesis.c  17_unary_parenthesis_2.c  18_unary_parenthesis_4.c  19_unary_var.c  1_function_without_call.c  1_if_in_while.c  1_if_not_equal.c  1_multiplication.c  1_printchar.c  1_while.c  20_infinite_plus.c  21_return_parenthesis.c  22_complicated_expression.c  23_multiple_unary_minus_sign_before.c  24_multiple_unary_sign_parenthesis.c  26_empty_block_int.c  27_equality.c  28_not.c  29_not_equal.c  2_function_call.c  2_if_equal.c  (+60 more)
tests/testfiles/_H03_Testfiles/: 028_Type_inference.c
tests/testfiles/arithmetics/: return_addsub_times.c  return_div.c  return_long_add.c  return_ones_priority_2.c  return_times_div.c
tests/testfiles/basics/: comment_2.c  grammar_error_1.c  grammar_error_5.c  grammar_error_6.c  simple_assignement.c  simple_expression.c  unnamed_block.c  var_declaration.c
tests/testfiles/bitwise/: bitwise_complex.c  bitwise_not.c  bitwise_or.c  bitwise_xor.c
tests/testfiles/branchs/: basic_if.c  complex_branch_1.c  complex_branch_2.c  complex_branch_3.c  complex_branch_4.c  complex_branch_5.c  complex_branch_6.c  complex_switch_case_1.c  complex_while_1.c  complex_while_2.c  complex_while_3.c  short_if.c  short_if_else.c  short_if_else_false.c  short_if_else_true.c  short_if_false.c  simple_if_else.c  (+13 more)
(+85 files in other folders)
